RESOLVED FIXED278184
[text-box] Fix serialization of text-box shorthand
https://bugs.webkit.org/show_bug.cgi?id=278184
Summary [text-box] Fix serialization of text-box shorthand
Tim Nguyen (:ntim)
Reported 2024-08-15 13:08:47 PDT
There are a couple of WPT failing
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-15 13:09:06 PDT
Tim Nguyen (:ntim)
Comment 2 2024-08-15 15:03:16 PDT
Tim Nguyen (:ntim)
Comment 3 2024-08-15 15:45:38 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47630
EWS
Comment 4 2024-08-15 20:41:31 PDT
Committed 282328@main (ad94a49c0e6d): <https://commits.webkit.org/282328@main> Reviewed commits have been landed. Closing PR #32267 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.