[text-box] Fix serialization of text-box shorthand https://bugs.webkit.org/show_bug.cgi?id=278184 rdar://133974557

Reviewed by Alan Baradlay.

These changes are done to ensure correct serialization:
- Fix the second value default in text-box-edge/line-fit-edge (text for cap/ex and identical value for the other ones)
- Omit "trim-both" when text-box-edge value is non-default, since "trim-both" is the default in that case.
- none + auto serialize to normal

As a cleanup, also switch from CSSValueList to CSSValuePair for text-box-edge/line-fit-edge.

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/text-box-edge-property-parsing-expected.txt: Removed.
* LayoutTests/fast/text/text-box-edge-property-parsing.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-edge-valid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-trim-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-trim-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-inline/text-box-trim/parsing/text-box-valid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks-expected.txt:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::valueForTextEdge):
(WebCore::ComputedStyleExtractor::textBoxShorthandValue const):
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
(WebCore::valueForTextBoxEdge): Deleted.
(WebCore::valueForLineFitEdge): Deleted.
* Source/WebCore/css/ShorthandSerializer.cpp:
(WebCore::ShorthandSerializer::serializeTextBox const):
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeTextEdge):
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertTextEdge):

Canonical link: https://commits.webkit.org/282328@main